# signaltwin

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
adapters/: adapter-plan.md
baselines/: adapter_fixture_baseline.json
configs/: adapter-fixtures.yml
docs/: README.md  adapter-contract.md  api-dashboard-contract.md  architecture.md  baseline-and-comparison.md  device-io-assumptions.md  io-schema.md  mvp-plan.md  pre-hardware-readiness.md  raw-io-fixtures.md  risk-model.md  scenario-format.md  technical-interview-q-and-a.md  technology-selection.md
experiments/: acoustic_room_drift.md  csi_obstruction_drift.md  thermal_condensation_risk.md  wood_moisture_drift.md
fixtures/raw/: acoustic_features.json  bms_context.csv  pzt_adc.csv  thermal_matrix.json  visual_defects.json  wifi_csi.csv
hardware/: edge-kit-bom.md  wiring-esp32-csi.md  wiring-inmp441.md  wiring-mlx90640.md  wiring-pzt-ads1115.md
outputs/: maintenance_report.example.md  risk_report.example.json  roomci_scenario.example.yml
outputs/demo/: api_response.example.json  dashboard_view_model.example.json
scenarios/: coastal_villa_moss_risk.yml  communication_drift.yml  hvac_efficiency_drift.yml  rainy_season_wood_wall.yml
signaltwin_proposal_pack/: README.md
signaltwin_proposal_pack/docs/: concept.md  mvp-completion-report.md  next-phase-adapter-plan.md  not-a-hotel-proposal.md  signal-io-roadmap.md
src/signaltwin/: api_contract.py  baseline.py  cli.py  comparison.py  demo.py  exporters.py  normalizer.py  risk_engine.py  scenario_loader.py  schema.py
tasks/: README.md  hardware-handoff.md  mvp-roadmap.md  status.md
tasks/phase0/: 01_project_skeleton_task.md  02_test_harness_task.md  03_output_hygiene_task.md  phase_goal.md  phase_status.md  phase_test.md
tasks/phase1/: 01_scenario_input_models_task.md  02_signal_frame_models_task.md  03_report_output_models_task.md  phase_goal.md  phase_status.md  phase_test.md
tasks/phase10/: 01_adapter_ready_e2e_regression_task.md  02_readme_adapter_ready_usage_task.md  03_proposal_pack_adapter_sync_task.md  04_adapter_to_risk_e2e_regression_task.md  05_adapter_ready_closeout_task.md  phase_goal.md  phase_status.md  phase_test.md
tasks/phase11/: 01_adapter_registry_task.md  02_adapter_fixture_config_task.md  03_adapter_inspect_cli_task.md  04_adapter_cli_error_handling_task.md  05_adapter_operations_docs_task.md  phase_goal.md  phase_status.md  phase_test.md
tasks/phase12/: phase_goal.md  (+7 more)
tests/: test_adapter_cli.py  test_adapter_contracts.py  test_adapter_ready_mvp.py  test_adapter_registry.py  test_api_dashboard_contract.py  test_baseline_store.py  test_cli.py  test_demo_pipeline.py  test_drift_comparison.py  test_exporters.py  test_fixture_adapters.py  test_mvp_regression.py  test_normalizer.py  test_pre_hardware_readiness.py  test_project_baseline.py  test_raw_fixture_contracts.py  test_risk_engine.py  test_scenario_loader.py  test_schema_contracts.py
(+95 files in other folders)
