[project]
name = "signaltwin"
version = "0.1.0"
description = "Hardware-free SignalTwin Scenario Engine MVP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2",
  "pyyaml>=6",
  "typer>=0.12",
]

[project.scripts]
signaltwin = "signaltwin.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8",
]
dev = [
  "mypy>=1.10",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
