[project]
name = "signaltwin"
version = "0.1.0"
description = "Hardware-free SignalTwin Scenario Engine MVP"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
keywords = [
  "building-health",
  "bms",
  "digital-twin",
  "risk-scoring",
  "signal-processing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "pydantic>=2.13.4",
  "pyyaml>=6.0.3",
  "typer>=0.26.3",
]

[project.urls]
Homepage = "https://github.com/albert-einshutoin/signaltwin"
Repository = "https://github.com/albert-einshutoin/signaltwin"
Issues = "https://github.com/albert-einshutoin/signaltwin/issues"
Documentation = "https://github.com/albert-einshutoin/signaltwin/blob/main/docs/README.md"

[project.scripts]
signaltwin = "signaltwin.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=9.0.3",
]
dev = [
  "mypy>=2.1.0",
  "ruff>=0.15.15",
  "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
